cek untuk update

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
         "ncjoes/office-converter": "^1.0",
         "phpoffice/phpword": "^1.4"
     },
@@ -46,7 +47,8 @@
         "files": [
             "app/helpers.php",
             "app/Helpers/AuditHelper.php",
-            "app/Helpers/GlHelper.php"
+            "app/Helpers/GlHelper.php",
+            "app/Helpers/ProyekHelper.php"
         ]
     },
     "autoload-dev": {
