--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "kalnoy/nestedset": "^6.0",
-        "laravel/framework": "^9.0",
-        "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7",
-        "maatwebsite/excel": "^3.1",
+        "laravel/framework": "^10.0",
+        "laravel/sanctum": "^3.0",
+        "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.6",
+        "maatwebsite/excel": "^3.1|^3.2",
         "ncjoes/office-converter": "^1.0",
         "phpoffice/phpword": "^1.4"
     },
@@ -24,7 +25,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/ignition": "^1.15"
     },
     "config": {
         "optimize-autoloader": true,
