--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.6",
-        "maatwebsite/excel": "^3.1|^3.2",
+        "maatwebsite/excel": "^3.1.40",
         "ncjoes/office-converter": "^1.0",
         "phpoffice/phpword": "^1.4"
     },
